--- a/all/themes/pixelgarage/less/mixins/text.less
+++ b/all/themes/pixelgarage/less/mixins/text.less
@@ -117,7 +117,7 @@
       vertical-align: middle;
       overflow: hidden;
       margin: 0 auto;
-      padding: @grid-gutter-width/2;
+      padding: 0;
       max-width: 100%;
     }
 
