--- a/all/themes/pixelgarage/less/ckeditor.less
+++ b/all/themes/pixelgarage/less/ckeditor.less
@@ -69,6 +69,18 @@
   border: 1px solid @pxl-colored-color;
   .border-radius(5px);
   background-color: @pxl-colored-color;
+
+  a {
+    font-family: @pxl-text-font-bold !important;
+    .font-size-responsive(25px, 22px);
+    color: #fff !important;
+    text-decoration: none !important;
+
+    &:hover {
+      color: #fff !important;
+      text-decoration: none !important;
+    }
+  }
 }
 
 .colored-numbered-list {
