--- a/all/themes/pixelgarage/less/pxlComponents/webform.less
+++ b/all/themes/pixelgarage/less/pxlComponents/webform.less
@@ -35,6 +35,7 @@
   width: auto;
   font-family: @pxl-text-font;
   #pxl-mixins.font-size-responsive(19px, 14px);
+  font-weight: normal;
   letter-spacing: normal;
   text-align: left;
   text-transform: none;
