--- a/all/themes/pixelgarage/less/pxlComponents/node-post.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-post.less
@@ -197,11 +197,13 @@
             .rate-widget {
               .rating-score {
                 display: inline-block;
+                margin: 0 3px;
                 vertical-align: middle;
               }
 
               .rate-thumbs-up-btn-up {
                 display: inline-block;
+                margin: 0 3px;
                 overflow: hidden;
                 vertical-align: middle;
                 width: 24px;
@@ -225,6 +227,7 @@
         .field-name-field-category {
           display: inline-block;
           vertical-align: middle;
+          margin: 0 3px;
 
           .field-item {
             overflow: hidden;
