--- a/all/themes/pixelgarage/less/pxlComponents/webform.less
+++ b/all/themes/pixelgarage/less/pxlComponents/webform.less
@@ -289,7 +289,7 @@ form.webform-client-form {
 
     input.form-text, textarea {
       padding: 0 10px;
-      font-family: @pxl-text-font-light;
+      font-family: @pxl-text-font;
       #pxl-mixins.font-size-responsive(17px, 14px);
       color: @webform-color-input;
       line-height: 1.2;
