--- a/all/themes/pixelgarage/less/header.less
+++ b/all/themes/pixelgarage/less/header.less
@@ -52,6 +52,10 @@ header#navbar {
         padding: 0;
         outline: none;
 
+        @media @normal {
+          margin-left: -50px;
+        }
+
         img {
           margin: 0;
           width: 150px;
