- style input Marius

--- a/all/themes/pixelgarage/less/pxlComponents/node-testimonial.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-testimonial.less
@@ -35,7 +35,7 @@
       }
 
       .field-name-body {
-        margin: @grid-gutter-width auto 0;
+        margin: 14px auto 0;
         width: 90%;
         #pxl-mixins.wysiwyg-body(34px);
 
