--- a/all/themes/pixelgarage/less/pxlComponents/webform.less
+++ b/all/themes/pixelgarage/less/pxlComponents/webform.less
@@ -394,6 +394,7 @@ form.webform-client-form {
         position: relative;
         float: none;
         padding: 0;
+        width: 75%;
         #pxl-mixins.font-size-responsive(17px, 14px);
         color: @webform-color-input;
         text-align: left;
