--- a/all/themes/pixelgarage/less/fonts.less
+++ b/all/themes/pixelgarage/less/fonts.less
@@ -17,7 +17,8 @@
 @pxl-icon-font: 'fontawesome';
 
 // title font
-@pxl-title-font: 'Catamaran-ExtraBold', sans-serif;
+@pxl-title-font: 'SohoGothicProBold';
+@pxl-subtitle-font: 'SohoGothicProBold';
 
 // text fonts
 @pxl-text-font: 'Catamaran-ExtraBold', sans-serif;
