--- a/all/themes/pixelgarage/less/pxlComponents/node-page.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-page.less
@@ -47,7 +47,7 @@
       }
 
       .field-name-body {
-        #pxl-mixins.wysiwyg-body(17px);
+        #pxl-mixins.wysiwyg-body();
 
         p {
           font-family: @pxl-text-font-light;
