--- a/all/themes/pixelgarage/less/pxlComponents/node-webform.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-webform.less
@@ -48,7 +48,7 @@
       }
 
       .field-name-body {
-        #pxl-mixins.wysiwyg-body(17px);
+        #pxl-mixins.wysiwyg-body();
 
         p {
           line-height: 22px;
