--- a/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
+++ b/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
@@ -7,6 +7,8 @@
 @import "login";
 @import "block-social";
 @import "block-language";
+@import "social-shariff";
+
 
 // nodes
 @import "node-post";
@@ -14,9 +16,6 @@
 @import "node-page";
 @import "node-footer";
 @import "node-donate";
-@import "node-testimonial";
-@import "node-facebook";
-@import "node-tweet";
 
 // views
 @import "view-post-grid";
