--- a/all/themes/pixelgarage/less/pxlComponents/node-donate.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-donate.less
@@ -33,7 +33,7 @@
       }
 
       .field-name-body {
-        #pxl-mixins.wysiwyg-body(17px);
+        #pxl-mixins.wysiwyg-body();
 
         p {
           line-height: 22px;
@@ -42,7 +42,7 @@
 
       .field-name-field-account-details {
         margin: 30px auto 0;
-        #pxl-mixins.wysiwyg-body(17px);
+        #pxl-mixins.wysiwyg-body();
 
         p {
           font-family: @pxl-text-font-light;
