--- a/all/themes/pixelgarage/less/pxlComponents/node-post.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-post.less
@@ -47,20 +47,25 @@
       text-align: center;
     }
 
-    .social-share {
-      margin-bottom: 10px;
+    .social-buttons {
+      margin-bottom: 20px;
       text-align: center;
 
-      .a2a_kit {
+      .shariff {
         display: inline-block;
+        .shariff();
 
-        a {
-          margin: 0;
-          padding: 0 10px;
+        ul.orientation-horizontal {
+          li.shariff-button {
+            width: 60px;
+            height: auto;
+          }
+
+
         }
-        // see block-social.less
       }
     }
+
   }
 
   .node-post-wrapper {
@@ -173,84 +178,6 @@
           text-align: left;
         }
       }
-
-      .group-icons {
-        position: absolute;
-        bottom: (100 - @start-text-area);
-        left: 0;
-        width: 100%;
-        padding: 5px 10px;
-        font-family: @pxl-text-font-light;
-        #pxl-mixins.font-size-responsive(16px, 12px);
-        color: white;
-        line-height: 1.1;
-        text-align: right;
-        #gradient.vertical(rgba(0,0,0,0.0), rgba(0,0,0,0.5), 0%, 100%);
-
-        .field-name-rate-integration-1 {
-          display: inline-block;
-          vertical-align: middle;
-          position: relative;
-          z-index: 100;
-
-          .field-item {
-            .rate-widget {
-              .rating-score {
-                display: inline-block;
-                margin: 0 3px;
-                vertical-align: middle;
-              }
-
-              .rate-thumbs-up-btn-up {
-                display: inline-block;
-                margin: 0 3px;
-                overflow: hidden;
-                vertical-align: middle;
-                width: 24px;
-                height: 24px;
-                text-indent: 100%;
-                white-space: nowrap;
-                background: url(../images/icon-herz-white.png) no-repeat center center / contain;
-              }
-            }
-
-            &:hover {
-              .rate-widget {
-                .rate-thumbs-up-btn-up {
-                  background: url(../images/icon-herz.png) no-repeat center center / contain;
-                }
-              }
-            }
-          }
-        }
-
-        .field-name-field-category {
-          display: inline-block;
-          vertical-align: middle;
-          margin: 0 3px;
-
-          .field-item {
-            overflow: hidden;
-            width: 24px;
-            height: 24px;
-            text-indent: 100%;
-            white-space: nowrap;
-
-            &.category-52 { // mobility
-              background: url(../images/icon-ferien-white.png) no-repeat center center / contain;
-            }
-            &.category-53 { // heat
-              background: url(../images/icon-dusche-white.png) no-repeat center center / contain;
-            }
-            &.category-54 { // food
-              background: url(../images/icon-cervelat-white.png) no-repeat center center / contain;
-            }
-            &.category-56 { // tecPost
-              background: url(../images/icon-bulb-white.png) no-repeat center center / contain;
-            }
-          }
-        }
-      }
     }
   }
 
@@ -272,31 +199,6 @@
           @media @narrow {
             font-size: 25px;
           }
-        }
-
-        .group-icons {
-          @media @narrow {
-            font-size: 22px;
-
-            .field-name-rate-integration-1 {
-              .field-item{
-                .rate-widget {
-                  .rate-thumbs-up-btn-up {
-                    width: 30px;
-                    height: 30px;
-                  }
-                }
-              }
-            }
-
-            .field-name-field-category {
-              .field-item {
-                width: 30px;
-                height: 30px;
-              }
-            }
-          }
-
         }
       }
     }
